{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 30,
  "lineage": "1226bec3-89d9-202c-28f2-ebfee227346f",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vnet-hub-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/715f5256-9108-45b2-8c05-80fccb330711/resourceGroups/vnet-hub-rg-tst/providers/Microsoft.Network/networkSecurityGroups/vnet-hub-nsg-tst",
            "location": "westeurope",
            "name": "vnet-hub-nsg-tst",
            "resource_group_name": "vnet-hub-rg-tst",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet-hub-nsg-tst",
            "resource_group_name": "vnet-hub-rg-tst",
            "subscription_id": "715f5256-9108-45b2-8c05-80fccb330711"
          },
          "dependencies": [
            "azurerm_resource_group.vnet-hub-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vnet-spoke-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/715f5256-9108-45b2-8c05-80fccb330711/resourceGroups/vnet-spoke-rg-tst/providers/Microsoft.Network/networkSecurityGroups/vnet-nsg-tst",
            "location": "westeurope",
            "name": "vnet-nsg-tst",
            "resource_group_name": "vnet-spoke-rg-tst",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet-nsg-tst",
            "resource_group_name": "vnet-spoke-rg-tst",
            "subscription_id": "715f5256-9108-45b2-8c05-80fccb330711"
          },
          "dependencies": [
            "azurerm_resource_group.vnet-spoke-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet-hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "dns_servers": [
              "10.0.0.4",
              "10.0.0.5"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "78d265c8-4420-4a97-a73c-d18b09d241b2",
            "id": "/subscriptions/715f5256-9108-45b2-8c05-80fccb330711/resourceGroups/vnet-hub-rg-tst/providers/Microsoft.Network/virtualNetworks/vnet-hub-tst",
            "location": "westeurope",
            "name": "vnet-hub-tst",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "vnet-hub-rg-tst",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/715f5256-9108-45b2-8c05-80fccb330711/resourceGroups/vnet-hub-rg-tst/providers/Microsoft.Network/virtualNetworks/vnet-hub-tst/subnets/gateway",
                "name": "gateway",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/715f5256-9108-45b2-8c05-80fccb330711/resourceGroups/vnet-hub-rg-tst/providers/Microsoft.Network/virtualNetworks/vnet-hub-tst/subnets/snet-management",
                "name": "snet-management",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/715f5256-9108-45b2-8c05-80fccb330711/resourceGroups/vnet-hub-rg-tst/providers/Microsoft.Network/networkSecurityGroups/vnet-hub-nsg-tst"
              }
            ],
            "tags": {
              "environment": "TST"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet-hub-tst",
            "resource_group_name": "vnet-hub-rg-tst",
            "subscription_id": "715f5256-9108-45b2-8c05-80fccb330711"
          },
          "dependencies": [
            "azurerm_network_security_group.vnet-hub-nsg",
            "azurerm_resource_group.vnet-hub-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet-spoke",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "dns_servers": [
              "10.1.0.4",
              "10.1.0.5"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "8d9cc39f-885e-40df-822c-21512b565703",
            "id": "/subscriptions/715f5256-9108-45b2-8c05-80fccb330711/resourceGroups/vnet-spoke-rg-tst/providers/Microsoft.Network/virtualNetworks/vnet-spoke-tst",
            "location": "westeurope",
            "name": "vnet-spoke-tst",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "vnet-spoke-rg-tst",
            "subnet": [
              {
                "address_prefixes": [
                  "10.1.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/715f5256-9108-45b2-8c05-80fccb330711/resourceGroups/vnet-spoke-rg-tst/providers/Microsoft.Network/virtualNetworks/vnet-spoke-tst/subnets/frontend",
                "name": "frontend",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.1.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/715f5256-9108-45b2-8c05-80fccb330711/resourceGroups/vnet-spoke-rg-tst/providers/Microsoft.Network/virtualNetworks/vnet-spoke-tst/subnets/backend",
                "name": "backend",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/715f5256-9108-45b2-8c05-80fccb330711/resourceGroups/vnet-spoke-rg-tst/providers/Microsoft.Network/networkSecurityGroups/vnet-nsg-tst"
              }
            ],
            "tags": {
              "environment": "TST"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet-spoke-tst",
            "resource_group_name": "vnet-spoke-rg-tst",
            "subscription_id": "715f5256-9108-45b2-8c05-80fccb330711"
          },
          "dependencies": [
            "azurerm_network_security_group.vnet-spoke-nsg",
            "azurerm_resource_group.vnet-spoke-rg"
          ]
        }
      ]
    }
  ]
}